# Software-engineering

./: .deepsource.toml  .gitignore  Dockerfile  Group.py  README.md  Student.py  azure-pipelines-1.yml  azure-pipelines.yml  docker-compose.yml  main.py  pyproject.toml  setup.py  start_container.sh
.azure/: azure-pipelines.yml
.github/workflows/: formatting.yml  main_3tina.yml  run_tests.yml
data/: example.csv  test.csv
src/: CsvReader.py  CsvWriter.py  EmailParser.py  Group.py  GroupFactory.py  IPerson.py  IPrintable.py  Person.py  PersonFactory.py  PersonFinder.py  Populator.py  Print_strategy.py  Print_student.py  Print_teacher.py  Student.py  __init__.py  app.py  group.py  helpers.py  main.py  student.py  teacher.py
src/data/: JoffreyBlaak.csv
src/static/css/: main.css
src/templates/: find_class.html  form.html  groupless.html  groups.html  index.html  make_group.html  make_groups.html  show_group.html  students.html  test.html  upload.html
test/: test_helpers.py  test_sample.py  test_student.py
